trade revised, fix NaN on mob health